; ModuleID = '/home/carl/AnghaBench/redis/src/extr_sentinel.c_sentinelAddFlagsToDictOfRedisInstances.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_sentinel.c_sentinelAddFlagsToDictOfRedisInstances.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sentinelAddFlagsToDictOfRedisInstances(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @dictGetIterator(i32* %8)
  store i32* %9, i32** %5, align 8
  br label %10

10:                                               ; preds = %14, %2
  %11 = load i32*, i32** %5, align 8
  %12 = call i32* @dictNext(i32* %11)
  store i32* %12, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %22

14:                                               ; preds = %10
  %15 = load i32*, i32** %6, align 8
  %16 = call %struct.TYPE_3__* @dictGetVal(i32* %15)
  store %struct.TYPE_3__* %16, %struct.TYPE_3__** %7, align 8
  %17 = load i32, i32* %4, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = or i32 %20, %17
  store i32 %21, i32* %19, align 4
  br label %10

22:                                               ; preds = %10
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @dictReleaseIterator(i32* %23)
  ret void
}

declare dso_local i32* @dictGetIterator(i32*) #1

declare dso_local i32* @dictNext(i32*) #1

declare dso_local %struct.TYPE_3__* @dictGetVal(i32*) #1

declare dso_local i32 @dictReleaseIterator(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
